Update to Scala 2.10.0, Casbah 2.5-Snapshot, Salat-1.9.2-Snapshot

--- a/README
+++ b/README
@@ -1,4 +1,11 @@
-This is your new Play 2.0 application
+Sample Play application
 =====================================
 
-This file will be packaged with your application, when using `play dist`.
+Example of a Scala project using Play &amp; Mongo (Casbah/Salat)
+<br/>Based on blog post from: http://yobriefca.se/blog/2012/05/08/starter-for-10-scala/
+
+## Versions used:
+* Scala 2.10
+* Play 2.1-RC2
+* Casbah 2.5-SNAPSHOT
+* Salat 1.9.2-SNAPSHOT
